--- a/app/src/main/res/layout/content_recipe.xml
+++ b/app/src/main/res/layout/content_recipe.xml
@@ -118,7 +118,7 @@
 
         <TextView
             android:id="@+id/aboutLabelTV"
-            style="@style/bigPlainText"
+            style="@style/bigPlainTextBright"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
@@ -141,7 +141,7 @@
 
         <TextView
             android:id="@+id/commentsSectionTV"
-            style="@style/bigPlainText"
+            style="@style/bigPlainTextBright"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
