--- a/app/src/main/res/layout/fragment_home_screen.xml
+++ b/app/src/main/res/layout/fragment_home_screen.xml
@@ -9,7 +9,7 @@
 
     <TextView
         android:id="@+id/yourPlanLabelTV"
-        style="@style/bigPlainText"
+        style="@style/bigPlainTextBright"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
