--- a/app/src/main/res/layout/fragment_nutrition_vitamin_targets_tab.xml
+++ b/app/src/main/res/layout/fragment_nutrition_vitamin_targets_tab.xml
@@ -173,11 +173,11 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="4dp"
             android:text="@string/vit_b1"
-            app:layout_constraintStart_toStartOf="@+id/vitB1ProgressBar"
+            app:layout_constraintStart_toStartOf="@+id/thiaminProgressBar"
             app:layout_constraintTop_toTopOf="parent" />
 
         <ProgressBar
-            android:id="@+id/vitB1ProgressBar"
+            android:id="@+id/thiaminProgressBar"
             style="@style/myHorizontalProgressBarStyle"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -191,17 +191,17 @@
             app:layout_constraintTop_toBottomOf="@id/potassiumBarLabelTV" />
 
         <TextView
-            android:id="@+id/seleniumBarLabelTV"
+            android:id="@+id/riboflavinBarLabelTV"
             style="@style/smallText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="2dp"
             android:text="@string/vit_b2"
-            app:layout_constraintStart_toStartOf="@+id/vitB2ProgressBar"
-            app:layout_constraintTop_toBottomOf="@id/vitB1ProgressBar" />
+            app:layout_constraintStart_toStartOf="@+id/riboflavinProgressBar"
+            app:layout_constraintTop_toBottomOf="@id/thiaminProgressBar" />
 
         <ProgressBar
-            android:id="@+id/vitB2ProgressBar"
+            android:id="@+id/riboflavinProgressBar"
             style="@style/myHorizontalProgressBarStyle"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -212,7 +212,7 @@
             android:progress="@{viewmodel.uiModelLiveData.data.nutrientsPercentages.get(`Riboflavin`)}"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="@+id/guideline2"
-            app:layout_constraintTop_toBottomOf="@+id/seleniumBarLabelTV" />
+            app:layout_constraintTop_toBottomOf="@+id/riboflavinBarLabelTV" />
 
         <TextView
             android:id="@+id/zincBarLabelTV"
@@ -221,11 +221,11 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="2dp"
             android:text="@string/vit_b3"
-            app:layout_constraintStart_toStartOf="@+id/vitB3ProgressBar"
-            app:layout_constraintTop_toBottomOf="@id/vitB2ProgressBar" />
+            app:layout_constraintStart_toStartOf="@+id/niacinProgressBar"
+            app:layout_constraintTop_toBottomOf="@id/riboflavinProgressBar" />
 
         <ProgressBar
-            android:id="@+id/vitB3ProgressBar"
+            android:id="@+id/niacinProgressBar"
             style="@style/myHorizontalProgressBarStyle"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -246,7 +246,7 @@
             android:layout_marginTop="2dp"
             android:text="@string/vit_b5"
             app:layout_constraintStart_toStartOf="@+id/vitB5ProgressBar"
-            app:layout_constraintTop_toBottomOf="@id/vitB3ProgressBar" />
+            app:layout_constraintTop_toBottomOf="@id/niacinProgressBar" />
 
         <ProgressBar
             android:id="@+id/vitB5ProgressBar"
