--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -22,10 +22,16 @@
         <item name="android:textSize">20sp</item>
     </style>
 
-    <style name="bigPlainText">
+    <style name="bigPlainTextBright">
         <item name="android:textSize">24sp</item>
         <item name="android:textStyle">bold</item>
         <item name="android:textColor">@color/white</item>
+    </style>
+
+    <style name="bigPlainTextDark">
+        <item name="android:textSize">24sp</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textColor">@color/colorBlack</item>
     </style>
 
     <style name="RecipeTitle">
