--- a/app/src/main/res/layout/fragment_nutrition_screen.xml
+++ b/app/src/main/res/layout/fragment_nutrition_screen.xml
@@ -42,7 +42,7 @@
             <ListView
                 android:id="@+id/nutritionMealsListView"
                 android:layout_width="match_parent"
-                android:layout_height="0dp"
+                android:layout_height="wrap_content"
                 android:layout_marginTop="32dp">
 
             </ListView>
@@ -84,7 +84,7 @@
 
             <TextView
                 android:id="@+id/nutritionDateTV"
-                style="@style/normalTextBold"
+                style="@style/normalTextBoldBright"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@{viewModel.date.toString()}"
