--- a/app/src/main/res/layout/content_recipe.xml
+++ b/app/src/main/res/layout/content_recipe.xml
@@ -53,7 +53,7 @@
 
         <TextView
             android:id="@+id/cookingTimeLabelTV"
-            style="@style/normalTextBold"
+            style="@style/normalTextBoldBright"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
@@ -64,7 +64,7 @@
 
         <TextView
             android:id="@+id/likedByLabelTV"
-            style="@style/normalTextBold"
+            style="@style/normalTextBoldBright"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
@@ -74,7 +74,7 @@
 
         <TextView
             android:id="@+id/goodForLabelTV"
-            style="@style/normalTextBold"
+            style="@style/normalTextBoldBright"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
@@ -164,7 +164,7 @@
 
         <TextView
             android:id="@+id/cookingTimeTV"
-            style="@style/normalTextBold"
+            style="@style/normalTextBoldBright"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
@@ -182,7 +182,7 @@
 
         <TextView
             android:id="@+id/likedByTV"
-            style="@style/normalTextBold"
+            style="@style/normalTextBoldBright"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
@@ -192,7 +192,7 @@
 
         <TextView
             android:id="@+id/goodForTV"
-            style="@style/normalTextBold"
+            style="@style/normalTextBoldBright"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
