--- a/app/src/main/res/layout/fragment_nutrition_minerals_targets_tab.xml
+++ b/app/src/main/res/layout/fragment_nutrition_minerals_targets_tab.xml
@@ -22,7 +22,7 @@
 
         <TextView
             android:id="@+id/calciumBarLabelTV"
-            style="@style/smallText"
+            style="@style/smallTextDark"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="4dp"
@@ -48,7 +48,7 @@
 
         <TextView
             android:id="@+id/copperBarLabelTV"
-            style="@style/smallText"
+            style="@style/smallTextDark"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="2dp"
@@ -72,7 +72,7 @@
 
         <TextView
             android:id="@+id/ironBarLabelTV"
-            style="@style/smallText"
+            style="@style/smallTextDark"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="2dp"
@@ -96,7 +96,7 @@
 
         <TextView
             android:id="@+id/magnesiumBarLabelTV"
-            style="@style/smallText"
+            style="@style/smallTextDark"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="2dp"
@@ -120,7 +120,7 @@
 
         <TextView
             android:id="@+id/manganeseBarLabelTV"
-            style="@style/smallText"
+            style="@style/smallTextDark"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="2dp"
@@ -143,7 +143,7 @@
 
         <TextView
             android:id="@+id/potassiumBarLabelTV"
-            style="@style/smallText"
+            style="@style/smallTextDark"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="4dp"
@@ -167,7 +167,7 @@
 
         <TextView
             android:id="@+id/riboflavinBarLabelTV"
-            style="@style/smallText"
+            style="@style/smallTextDark"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="2dp"
@@ -191,7 +191,7 @@
 
         <TextView
             android:id="@+id/zincBarLabelTV"
-            style="@style/smallText"
+            style="@style/smallTextDark"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="2dp"
@@ -215,7 +215,7 @@
 
         <TextView
             android:id="@+id/phosphorusBarLabelTV"
-            style="@style/smallText"
+            style="@style/smallTextDark"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="2dp"
