--- a/app/src/main/res/layout/nutrition_meals_list_item.xml
+++ b/app/src/main/res/layout/nutrition_meals_list_item.xml
@@ -10,11 +10,11 @@
         android:layout_height="wrap_content"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/ic_white_set_meal_36" />
+        app:srcCompat="@drawable/ic_black_set_meal_36" />
 
     <TextView
         android:id="@+id/mealNameTV"
-        style="@style/medium_bold_text"
+        style="@style/medium_bold_text_dark"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
@@ -24,7 +24,7 @@
 
     <TextView
         android:id="@+id/mealAmountTV"
-        style="@style/smallText"
+        style="@style/smallTextDark"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
@@ -34,7 +34,7 @@
 
     <TextView
         android:id="@+id/kcalLabelTV"
-        style="@style/normalTextBold"
+        style="@style/normalTextBoldDark"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
@@ -45,7 +45,7 @@
 
     <TextView
         android:id="@+id/kcalValueTV"
-        style="@style/normalTextBold"
+        style="@style/normalTextBoldDark"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="4dp"
@@ -55,7 +55,7 @@
 
     <TextView
         android:id="@+id/mealUnitTV"
-        style="@style/smallText"
+        style="@style/smallTextDark"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="4dp"
