--- a/app/src/main/res/layout/product_list_item.xml
+++ b/app/src/main/res/layout/product_list_item.xml
@@ -9,7 +9,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintStart_toStartOf="parent"
-        style="@style/normalTextBold"
+        style="@style/normalTextBoldBright"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
@@ -17,7 +17,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
-        style="@style/normalTextBold"
+        style="@style/normalTextBoldBright"
         app:layout_constraintBottom_toBottomOf="@+id/ingredientListItemCB"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@+id/ingredientListItemCB" />
