--- a/app/src/main/res/layout/recipe_list_item.xml
+++ b/app/src/main/res/layout/recipe_list_item.xml
@@ -40,7 +40,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/recipeCardThumbnail" />
 
             <ImageButton
-                android:id="@+id/addMealBtn"
+                android:id="@+id/addMealDialogBtn"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
                 android:layout_marginTop="8dp"
